se arregló incompatibilidades con